# prefect-waffle

./: README.md
prefect-waffle/: justfile  prefect.yaml  pyproject.toml
prefect-waffle/src/prefect_waffle/: script_flow.py
