[tool.poetry]
name = "prefect-waffle"
version = "0.1.0"
description = ""
authors = ["Mehdi-H <mehdihouacine7@gmail.com>"]
readme = "README.md"
packages = [{include = "prefect_waffle", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
